[package]
name = "deno_rwasm_string"
description = "WASM bindings to string function"
version = "0.1.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/Patrik64/deno_rwasm_string"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.92"

[profile.release]
lto = true
opt-level = "z"
